bin/testsuite/tests/compiler/src/errors/compiler4306.swg
#global testerror "Err0225"
#test
{
    var x: func(s32)
    x = func(?: s32) {
    }
}